# CrossPlatformAudiovisualizator

./: .gitignore  CMakeLists.txt  Main.qml  audiolevel.cpp  audiolevel.h  main.cpp
.github/workflows/: build.yml  gradle.properties
android/: AndroidManifest.xml
